tests/baselines/reference/ambientDeclarationsExternal.errors.txt
tests/cases/conformance/ambient/consumer.ts(2,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/ambient/consumer.ts (1 errors) ====
    /// <reference path="decls.ts" />
    import imp1 = require('equ');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    
    
    // Ambient external module members are always exported with or without export keyword when module lacks export assignment
    import imp3 = require('equ2');
    var n = imp3.x;
    var n: number;
    
==== tests/cases/conformance/ambient/decls.ts (0 errors) ====
    
    // Ambient external module with export assignment
    declare module 'equ' {
        var x;
        export = x;
    }
    
    declare module 'equ2' {
        var x: number;
    }
    
    // Ambient external import declaration referencing ambient external module using top level module name